kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-api
  labels:
    app: fake-api
spec:
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: fake-api
