kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: fake-api
spec:
  rules:
    - host: fake-api.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake-api
                port:
                  number: 80
